<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ssaj Scorer</string>
    <string name="new_game">New Game</string>
    <string name="resume">Resume last game</string>
    <string name="title_activity_rules">Rules</string>
    <string name="settings">Settings</string>
    <string name="rules">\nThe rules for who picks the cards, how they are distributed etc. are the same that the normal jass ones.\n\nThe goal of the game is to get as few points as possible. Points are gained so:\nIn the first round, you gain 5 points per fold you win.\nIn the second round, you gain 10 points per heart card you win.\nIn the third round, you win 20 points for every queen you win.\nIn the fourth round, you gain 50 points if you win the king of clubs.\nIn the fifth round, all these rules are mixed.\nAnd then it is five points per fold again etc.\n\nGood luck!</string>
    <string name="rulesAB">Rules</string>
    <string name="title_activity_game">Game</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="player3">Player 3</string>
    <string name="player4">Player 4</string>
    <string name="sendData">OK</string>
    <string name="requestInput">Enter the players\' names</string>
    <string name="folds">Folds</string>
    <string name="hearts">Hearts</string>
    <string name="heartsTrumps">Trumps are Hearts</string>
    <string name="clubs">Trumps are Clubs</string>
    <string name="spades">Trumps are Spades</string>
    <string name="diamonds">Trumps are Diamonds</string>
    <string name="queens">Queens</string>
    <string name="king">King of Clubs</string>
    <string name="all">All</string>

</resources>
