<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:id="@+id/p2"
    android:orientation="horizontal"
    android:background="#ffffff"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:weightSum="1">
    <TableLayout
        android:background="#ffffff"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_marginBottom="5pt"
            android:background="@drawable/border_button"
            android:layout_width="match_parent">
            <TextView android:text="@string/requestInput"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:textSize="13pt"
                android:textColor="#ed872d"
                android:background="#ffffff"
                />

        </TableRow>

        <TableRow
            android:background="#ffffff">
    <EditText
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:textColor="#606060"
        android:gravity="center"
        android:background="@drawable/border_edit"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/player1"
        android:layout_weight="1"
        android:shadowColor="#a0a0a0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:id="@+id/editP1"/>
    <EditText
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:textColor="#606060"
        android:gravity="center"
        android:background="@drawable/border_edit"
        android:shadowColor="#a0a0a0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/player2"
        android:layout_weight="1"
        android:id="@+id/editP2"
        />
    <EditText
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:textColor="#606060"
        android:gravity="center"
        android:background="@drawable/border_edit"
        android:shadowColor="#a0a0a0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:layout_height="fill_parent"
        android:layout_width="0dp"
        android:hint="@string/player3"
        android:id="@+id/editP3"
        android:layout_weight="1" />

    <EditText
        android:layout_marginTop="2dp"
        android:layout_marginBottom="1dp"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="1dp"
        android:textColor="#606060"
        android:gravity="center"
        android:background="@drawable/border_edit"
        android:shadowColor="#a0a0a0"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="2"
        android:layout_height="wrap_content"
        android:layout_width="0dp"
        android:hint="@string/player4"
        android:id="@+id/editP4"
        android:layout_weight="1" />
        </TableRow>

            <TableLayout
                android:background="#ffffff">
                <TableRow
                    android:layout_marginTop="14dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff"
                    android:layout_width="fill_parent"
                >

                    <Button
                        android:background="@drawable/border_button"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/new_game"
                        android:onClick="buttonNewGame"/>
                </TableRow>
                <TableRow
                    android:layout_marginTop="15dp"
                    android:layout_height="wrap_content"
                    android:background="#ffffff">
                    <Button
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/resume"
                        android:background="@drawable/border_button"
                        android:onClick="buttonResume"
                        android:id="@+id/buttonResume"/>
                    </TableRow>
            </TableLayout>


    </TableLayout>
</LinearLayout>
